// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Glide renders without crashing 1`] = `
<div
  className="glide--container"
  style={
    Object {
      "width": 500,
    }
  }
>
  <Preloader
    autoPlay={false}
    currentIndex={0}
    imagesLoaded={false}
    loading={true}
    onSlideChange={[MockFunction]}
    startTimer={[Function]}
    width={500}
  >
    <h1>
      Slide One
    </h1>
    <h1>
      Slide Two
    </h1>
    <h1>
      Slide Three
    </h1>
  </Preloader>
  <button
    className="glide--next-btn"
    onClick={[Function]}
  >
    ❯
  </button>
  <section
    className="glide--dots"
  >
    <span
      className="active-dot"
      onClick={[Function]}
    >
      ·
    </span>
    <span
      className="inactive-dot"
      onClick={[Function]}
    >
      ·
    </span>
    <span
      className="inactive-dot"
      onClick={[Function]}
    >
      ·
    </span>
  </section>
</div>
`;

exports[`Preloader shows loader 1`] = `
<Preloader
  autoPlay={false}
  currentIndex={0}
  dots={true}
  imagesLoaded={false}
  infinite={true}
  loading={true}
  onSlideChange={[MockFunction]}
  startTimer={[MockFunction]}
  width={500}
>
  <LoadingSpinner
    width={500}
  >
    <div
      style={
        Object {
          "height": "378.7878787878788px",
          "width": "500px",
        }
      }
    >
      <div
        className="loading-indicator"
      />
    </div>
  </LoadingSpinner>
</Preloader>
`;
